--- a/login.html
+++ b/login.html
@@ -12,10 +12,11 @@
 
     <title>Instagram-Login</title>
 </head>
-<body>
+<body class="centralize">
 
 <div class="wrapper">
 	<div class="header">
+		
 		<div class="top">
 			<div class="logo">
 				<img src="img/login/instagram.png" alt="instagram" style="width: 175px;">
@@ -77,5 +78,6 @@
 	</div>
 </div>
 <script type="text/javascript" src="js/login.js"></script>
+<script type="text/javascript" src="js/loading.js"></script>
 </body>
 </html>
